# sourmash_plugin_load_from_fasta

./: README.md  pyproject.toml
examples/: 47.head.fa  63.head.fa
src/: sourmash_plugin_load_from_fasta.py
