[project]
name = "sourmash_plugin_load_from_fasta"
description = "sourmash plugin to load sketches from a FASTA/FASTQ file with lazy sketching."
readme = "README.md"
requires-python = ">=3.8"
version = "0.1"

dependencies = ["sourmash>=4.8.0,<5"]

[metadata]
license = { text = "BSD 3-Clause License" }

[project.entry-points."sourmash.load_from"]
fasta_reader = "sourmash_plugin_load_from_fasta:lazy_load_screed"
